# bpa-trading-system

./: .gitconfig  .gitignore  ARCHITECTURE.md  Arbitrage_bot.py  Binance_main.py  Binance_user_data_ws.py  GSHN0552500HPBL.txt  GSHN0J52U00JYD1.txt  GSHN1352N00JXEM.txt  GSHN1F524000FG3.txt  GSHN2K527000S9X.txt  GSHN2L520000UR3.txt  GSHN5952W000TR0.txt  GSHN6R52U0016G4.txt  GSHN7152Y00M2BJ.txt  GSHN7452X000QJ6.txt  GSHN8G52N002SAK.txt  GSHN8T52100N7FN.txt  GSHNC252U000F6E.txt  GSHNC252X000X8G.txt  GSHNC652700NGSE.txt  GSHNC752Y00M2F5.txt  GSHNM552500HVDF.txt  GSHNSM5280004X3.txt  GSHNU25210007QQ.txt  GSHNUM52M000MBJ.txt  GSHNWU52N000JAU.txt  GSHNY152100MX5B.txt  GSHNY152100MX5K.txt  README.md  TESTArb_bot.py  TESTbinance_ads_manager.py  TESTbinance_c2c.py  TESTbinance_example.py  TESTbinance_getAdDetails.py  TESTbinance_getDetailByNo.py  TESTbinance_getReferencePrice.py  TESTbinance_main_ads.py  TESTbinance_merchant.py  TESTbinance_search.py  (+91 more)
ambar/: ambar_bot.py  ambar_inventario.py  ambar_wms.py  ordenes_shein.txt  temp_data.csv
ambar/shein_orders/: GSHMLK00A00MM79.txt  GSHN1B525000LKE.txt  GSHN2D5250008VJ.txt  GSHN2K52Q00MC73.txt  GSHN2R527000N2N.txt  GSHN2T528000CPL.txt  GSHN3652M001BYJ.txt  GSHN385200000HH.txt  GSHN3C5260019Y5.txt  GSHN3M52Y00NG0B.txt  GSHN5E52100MFRK.txt  GSHN7152Y00M2BH.txt  GSHN7152Y00M2BV.txt  GSHNCK52U00MBJ9.txt  GSHNCQ52X000U7Q.txt  (+10 more)
binance_tests/: TESTbinance_example.py  TESTbinance_getDetailByNo.py  TESTbinance_getReferencePrice.py  TESTbitso_price_listener.py  TESTorders.py  TESTtime.py  test_binance_image.py  test_cep.py  test_currency.py
exchanges/: asset_balances.py
my_env/: pyvenv.cfg
my_new_venv/: pyvenv.cfg
src/: asset_balances.py
utils/: common_utils.py  common_vars.py
venv37/: pyvenv.cfg
(+117 files in other folders)
